--- a/iOSCommonUI/LoginView/LoginViewGoogleV2.xib
+++ b/iOSCommonUI/LoginView/LoginViewGoogleV2.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -28,11 +28,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="LoginViewGoogleV2" customModule="iOSCommonUI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YMS-vr-zku">
-                    <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                    <rect key="frame" x="0.0" y="420" width="320" height="60"/>
                     <color key="backgroundColor" red="0.4393230676651001" green="0.15688806772232056" blue="0.4322439432144165" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="60" id="Eqt-lh-WDu"/>
@@ -46,16 +46,16 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zse-ch-S9Z">
-                    <rect key="frame" x="25" y="70" width="325" height="341.5"/>
+                    <rect key="frame" x="25" y="70" width="270" height="343"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Yj-A5-VUG">
-                            <rect key="frame" x="8" y="8" width="97" height="45.5"/>
+                            <rect key="frame" x="8" y="8" width="91" height="47"/>
                             <fontDescription key="fontDescription" name="Hermes-Thin" family="Hermes-Thin" pointSize="39"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tai-hL-gsc">
-                            <rect key="frame" x="0.0" y="88.5" width="325" height="65"/>
+                            <rect key="frame" x="0.0" y="90" width="270" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EMAIL ADDRESS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ErA-uI-LjO">
                                     <rect key="frame" x="8" y="8" width="102" height="16"/>
@@ -64,7 +64,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="straigharrow@email.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wKN-J0-pdd" customClass="DesignableTextField" customModule="iOSCommonUI" customModuleProvider="target">
-                                    <rect key="frame" x="8" y="27" width="309" height="30"/>
+                                    <rect key="frame" x="8" y="27" width="254" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="miP-Wx-V1D"/>
                                     </constraints>
@@ -78,7 +78,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JYi-fQ-0Do">
-                                    <rect key="frame" x="8" y="56" width="309" height="1"/>
+                                    <rect key="frame" x="8" y="56" width="254" height="1"/>
                                     <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="0.5" id="Br6-Bv-qLQ"/>
@@ -99,7 +99,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bbj-3h-KJg">
-                            <rect key="frame" x="0.0" y="163.5" width="325" height="65"/>
+                            <rect key="frame" x="0.0" y="165" width="270" height="65"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PASSWORD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKw-Rc-sdA">
                                     <rect key="frame" x="8" y="8" width="73" height="16"/>
@@ -108,7 +108,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="*********" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ISM-uF-nVW" customClass="DesignableTextField" customModule="iOSCommonUI" customModuleProvider="target">
-                                    <rect key="frame" x="8" y="27" width="309" height="30"/>
+                                    <rect key="frame" x="8" y="27" width="254" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="7Cf-E6-OMH"/>
                                     </constraints>
@@ -122,7 +122,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wmd-GJ-vib">
-                                    <rect key="frame" x="8" y="56" width="309" height="1"/>
+                                    <rect key="frame" x="8" y="56" width="254" height="1"/>
                                     <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="0.5" id="lLe-nr-dip"/>
@@ -143,16 +143,16 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bxR-h3-9G1">
-                            <rect key="frame" x="0.0" y="278.5" width="325" height="55"/>
+                            <rect key="frame" x="0.0" y="280" width="270" height="55"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQe-i5-GC9" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
-                                    <rect key="frame" x="183" y="0.0" width="135" height="55"/>
+                                    <rect key="frame" x="155.5" y="0.0" width="107.5" height="55"/>
                                     <color key="backgroundColor" red="0.81179056766674607" green="0.27661248432012714" blue="0.31336773652572886" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" priority="250" constant="150" id="dZx-bd-y2v"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
-                                    <state key="normal" title="Sign-in with Google">
+                                    <state key="normal" title="Sign-in Google">
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <userDefinedRuntimeAttributes>
@@ -165,7 +165,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="US6-aW-qPp" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
-                                    <rect key="frame" x="8" y="0.0" width="135" height="55"/>
+                                    <rect key="frame" x="8" y="0.0" width="107.5" height="55"/>
                                     <color key="backgroundColor" red="0.97174853086471558" green="0.65032738447189331" blue="0.12223779410123825" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="55" id="Vaj-VL-5Ax"/>
@@ -218,7 +218,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Jp-aI-pyy">
-                    <rect key="frame" x="116" y="569" width="143" height="30"/>
+                    <rect key="frame" x="98.5" y="382" width="123" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="WGS-Wr-PxP"/>
                     </constraints>
