--- a/iOSCommonUI/CustomTableViewCell/LabelCollectionViewCell/LabelCollectionViewCell.xib
+++ b/iOSCommonUI/CustomTableViewCell/LabelCollectionViewCell/LabelCollectionViewCell.xib
@@ -9,15 +9,10 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="MyriadPro-Regular.ttf">
-            <string>MyriadPro-Regular</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellCollectionLabel" id="gTV-IL-0wX" customClass="LabelCollectionViewCell" customModule="StraightArrow" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LabelCollectionViewCell" id="gTV-IL-0wX" customClass="LabelCollectionViewCell" customModule="StraightArrow" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="255" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -29,8 +24,8 @@
                         <constraints>
                             <constraint firstAttribute="width" priority="250" constant="255" id="kWv-jq-jg5"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.18953575440000001" green="0.18953575440000001" blue="0.18953575440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
