--- a/iOSCommonUI/CustomTableViewCell/CheckBoxWithLabelTableViewCellv2/CheckBoxWithLabelTableViewCellv2.xib
+++ b/iOSCommonUI/CustomTableViewCell/CheckBoxWithLabelTableViewCellv2/CheckBoxWithLabelTableViewCellv2.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_checkbox_v2" id="KGk-i7-Jjw" customClass="CheckBoxWithLabelTableViewCellv2" customModule="StraightArrow" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CheckBoxWithLabelTableViewCellv2" id="KGk-i7-Jjw" customClass="CheckBoxWithLabelTableViewCellv2" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -26,7 +26,6 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="16" id="Dc0-xc-HWH"/>
                                 </constraints>
-                                <state key="normal" image="uncheck"/>
                                 <state key="selected" image="check"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vegetarian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z7V-bj-2wf">
@@ -55,7 +54,6 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="16" id="wSV-dL-8Co"/>
                                 </constraints>
-                                <state key="normal" image="uncheck"/>
                                 <state key="selected" image="check"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vegetarian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqU-AL-OYo">
@@ -99,6 +97,5 @@
     </objects>
     <resources>
         <image name="check" width="16" height="16"/>
-        <image name="uncheck" width="16" height="16"/>
     </resources>
 </document>
