--- a/iOSCommonUI/CustomTableViewCell/ImageViewTableViewCell/ImageViewTableViewCell.xib
+++ b/iOSCommonUI/CustomTableViewCell/ImageViewTableViewCell/ImageViewTableViewCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageViewTableViewCell" rowHeight="139" id="KGk-i7-Jjw" customClass="ImageViewTableViewCell" customModule="StraightArrow" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageViewTableViewCell" rowHeight="139" id="KGk-i7-Jjw" customClass="ImageViewTableViewCell" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="139"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -26,7 +26,7 @@
                             <constraint firstAttribute="width" secondItem="xmu-wc-fze" secondAttribute="height" multiplier="160:69" id="CEI-Ne-k0B"/>
                         </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6uB-mN-6WW" customClass="GradientView" customModule="StraightArrow" customModuleProvider="target">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6uB-mN-6WW" customClass="GradientView" customModule="iOSCommonUI" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="138.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4PR-5d-xcy">
