--- a/iOSCommonUI/CustomTableViewCell/ImageViewTitleTableViewCell/ImageViewTitleTableViewCell.xib
+++ b/iOSCommonUI/CustomTableViewCell/ImageViewTitleTableViewCell/ImageViewTitleTableViewCell.xib
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageViewTitleTableViewCell" rowHeight="46" id="KGk-i7-Jjw" customClass="ImageViewTitleTableViewCell" customModule="StraightArrow" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageViewTitleTableViewCell" rowHeight="46" id="KGk-i7-Jjw" customClass="ImageViewTitleTableViewCell" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
