--- a/iOSCommonUI/CustomTableViewCell/PickerButtonTableViewCell/PickerButtonTableViewCell.xib
+++ b/iOSCommonUI/CustomTableViewCell/PickerButtonTableViewCell/PickerButtonTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_picker" rowHeight="85" id="KGk-i7-Jjw" customClass="PickerButtonTableViewCell" customModule="StraightArrow" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PickerButtonTableViewCell" rowHeight="85" id="KGk-i7-Jjw" customClass="PickerButtonTableViewCell" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -25,7 +25,7 @@
                         <color key="textColor" red="0.29099911099999998" green="0.29099911099999998" blue="0.29099911099999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" horizontalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LpY-Ky-AXP" customClass="DesignableView" customModule="StraightArrow" customModuleProvider="target">
+                    <view contentMode="scaleToFill" horizontalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LpY-Ky-AXP" customClass="DesignableView" customModule="iOSCommonUI" customModuleProvider="target">
                         <rect key="frame" x="16" y="29.5" width="288" height="44"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6G-Gu-Wia">
