--- a/iOSCommonUI/CustomTableViewCell/SubmitBtnTableViewCell/SubmitBtnTableViewCell.xib
+++ b/iOSCommonUI/CustomTableViewCell/SubmitBtnTableViewCell/SubmitBtnTableViewCell.xib
@@ -11,14 +11,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_btn_submit" rowHeight="68" id="KGk-i7-Jjw" customClass="SubmitBtnTableViewCell" customModule="StraightArrow" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SubmitBtnTableViewCell" rowHeight="68" id="KGk-i7-Jjw" customClass="SubmitBtnTableViewCell" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="67.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="51h-5U-iPO" customClass="DesignableButton" customModule="StraightArrow" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="51h-5U-iPO" customClass="DesignableButton" customModule="iOSCommonUI" customModuleProvider="target">
                         <rect key="frame" x="16" y="12" width="132" height="44"/>
                         <color key="backgroundColor" red="0.97105413675308228" green="0.65183615684509277" blue="0.12102828174829483" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
