--- a/iOSCommonUI/CustomTableViewCell/TextFieldTableViewCell/TextFieldTableViewCell.xib
+++ b/iOSCommonUI/CustomTableViewCell/TextFieldTableViewCell/TextFieldTableViewCell.xib
@@ -15,9 +15,9 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextFieldTableViewCell" customModule="StraightArrow" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TextFieldTableViewCell" customModule="iOSCommonUI" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell_label_textfield" rowHeight="73" id="JCP-Oj-Bzi" customClass="TextFieldTableViewCell" customModule="StraightArrow" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldTableViewCell" rowHeight="73" id="JCP-Oj-Bzi" customClass="TextFieldTableViewCell" customModule="iOSCommonUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="409" height="72"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="JCP-Oj-Bzi" id="8z7-hf-bmV">
